modificação do nome do projeto, alteração das imagen, alterações nas folhas de estilo

--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 
-    <title>NETFLIX CLONE</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <title>Pitch Flix</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
-            <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Séries</a>
-                <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
+            <h2 class="logo">PITCHFLIX</h2>
+            <nav class="menu">
+                <a href="index.html">Inicio</a>
+                <a title="Assistir pitches de negócios" href="#negocios">Negócios</a>
+                <a title="Assistir pitches pessoais" href="#pessoal">Pessoal</a>
+                <a href="#"><i title="Cadastrar pitch" class="fa-solid fa-circle-plus"></i></a>
+             
             </nav>
         </div>
     </header>
@@ -30,15 +35,15 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
+                <h3 class="titulo">Pitch - Venda seu peixe</h3>
+                <p class="descricao">Publique seu pitch de negócios ou pessoal aqui. Empresas, investidores e (ou) clientes podem gostar de sua proposta.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
-                        <i class="fas fa-play"></i>
-                        ASSISTIR AGORA
+                        <i class="fa-solid fa-circle-plus"></i>
+                        CADASTRAR PITCH
                     </button>
                     <button role="button" class="botao">
-                        <i class="fas fa-info-circle"></i>
+                        <i  class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
@@ -47,43 +52,102 @@
     </main>
 
     <div class="carrosel-filmes">
+        <h2 id="negocios" >Negócios</h2>
         <div class="owl-carousel owl-theme">
                 <div class="item">
                     <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini2.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini5.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini6.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini7.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini8.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini9.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/mini10.jpg" alt="" srcset="">
+                    <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora</p>
                 </div>
         </div>
+        <h2 id="pessoal">Pessoal</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa1.jpg" alt="pessoa1" srcset="">
+                <p>Nome: Dyego Felipe, Idade: 28, Profissão: Desenvolvedor Full stack Jr.</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa2.jpg" alt="pessoa2" srcset="">
+                <p>Nome: Maria Andrade , Idade: 25, Profissão: Desenvolvedora Java Pleno</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa3.jpg" alt="pessoa3" srcset="">
+                <p>Nome: Cristiano Silva , Idade: 32, Profissão: Engenheiro civil</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa4.jpg" alt="pessoa4" srcset="">
+                <p>Nome:Ana Cláudia , Idade: 29, Profissão: Analista de sistemas</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa5.jpg" alt="pessoa5" srcset="">
+                <p>Nome: Fábio Souza, Idade: 35, Profissão: Desenvolvedor .Net Sênior</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa6.jpeg" alt="pessoa6" srcset="">
+                <p>Nome: Sônia Oliveira , Idade: 34, Profissão: Arquiteta</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa7.png" alt="pessoa7" srcset="">
+                <p>Nome: Mônica Teixeira, Idade: 29, Profissão: Desenvolvedora Full Stack Pleno</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa8.png" alt="pessoa8" srcset="">
+                <p>Nome: Roberto Barros , Idade: 24, Profissão: Personal trainer</p>
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/pessoas/pessoa9.jpg" alt="pessoa9" srcset="">
+                <p>Nome: Sérgio Brito , Idade: 37, Profissão: Cientista de dados</p>
+            </div>
     </div>
+    </div>
+    <footer>
+<p>
+    Desenvolvido by Dyego Felipe - Desenvolvedor Full Stack Jr. <br>
+    <a href="https://github.com/dyegofelipe08" target="_blank" ><i class="fa-brands fa-github"></i></a> 
+    <a href="https://www.linkedin.com/in/dyego-felipe-de-oliveira-b3447514b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+   
+</p>
+
+    </footer>
 
 
 
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="https://kit.fontawesome.com/2771b88028.js" crossorigin="anonymous"></script>
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
